--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -34,6 +34,7 @@
     "lightning": "^10.10.0",
     "ln-service": "^57.5.1",
     "nextjs": "^0.0.3",
+    "ts-node": "^10.9.2",
     "ts-pattern": "^5.1.1",
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
