--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -20,7 +20,9 @@
     "@ethersproject/providers": "~5.7.2",
     "@heroicons/react": "~2.0.11",
     "@lightning-evm-bridge/shared": "workspace:^",
+    "@prisma/client": "^5.17.0",
     "@rainbow-me/rainbowkit": "^1.3.6",
+    "@svgr/webpack": "^8.1.0",
     "@uniswap/sdk-core": "~4.0.1",
     "@uniswap/v2-sdk": "~3.0.1",
     "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
@@ -32,6 +34,7 @@
     "framer-motion": "^11.0.8",
     "next": "~14.0.4",
     "nprogress": "~0.2.0",
+    "pg": "^8.12.0",
     "qrcode-generator-ts": "^0.0.4",
     "qrcode.react": "~3.1.0",
     "react": "~18.2.0",
@@ -50,6 +53,7 @@
     "@trivago/prettier-plugin-sort-imports": "~4.1.1",
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0",
+    "@types/pg": "^8",
     "@types/react": "^18.0.21",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "~5.40.0",
@@ -60,6 +64,7 @@
     "eslint-plugin-prettier": "~4.2.1",
     "postcss": "~8.4.16",
     "prettier": "~2.8.4",
+    "prisma": "^5.17.0",
     "tailwindcss": "~3.3.3",
     "type-fest": "~4.6.0",
     "typescript": "~5.1.6",
