--- a/packages/nextjs/sample.live.env
+++ b/packages/nextjs/sample.live.env
@@ -16,3 +16,5 @@ NEXTAUTH_URL="http://localhost:3000"
 PORT=3000
 LSP_ADDRESS="0xf89335a26933d8Dd6193fD91cAB4e1466e5198Bf"
 WEBSOCKET_URL="wss://botanix.diyahir.com/websocket"
+
+DATABASE_URL="postgresql://yourusername@localhost:5432/yourdatabase"
