--- a/packages/server/sample.env
+++ b/packages/server/sample.env
@@ -12,3 +12,9 @@ CHAIN_ID="3636"
 ### LSP Private Ket ###
 LSP_PRIVATE_KEY="0x1233....."
 # Generate a dummy evm private key, not a seed phase
+
+DATABASE_URL="postgresql://yourusername@localhost:5432/yourdatabase"
+
+# The port the server should run on
+PORT=3003
+HTTP_PORT=3002
