--- a/packages/nextjs/sample.env
+++ b/packages/nextjs/sample.env
@@ -10,6 +10,7 @@
 # You'll need to prefix the variables names with NEXT_PUBLIC_ if you want to access them on the client side.
 # More info: https://nextjs.org/docs/pages/building-your-application/configuring/environment-variables
 NEXT_PUBLIC_ALCHEMY_API_KEY=""
+NEXT_PUBLIC_INFURA_API_KEY=""
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=""
 NEXT_PUBLIC_VERCEL_URL="http://localhost:3000"
 NEXTAUTH_URL="http://localhost:3000"
