--- a/packages/nextjs/sample.live.env
+++ b/packages/nextjs/sample.live.env
@@ -11,11 +11,13 @@
 # More info: https://nextjs.org/docs/pages/building-your-application/configuring/environment-variables
 NEXT_PUBLIC_ALCHEMY_API_KEY=""
 NEXT_PUBLIC_INFURA_API_KEY=""
+NEXT_PUBLIC_RPC_API_KEY=""
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=""
 NEXT_PUBLIC_VERCEL_URL="http://localhost:3000"
 NEXTAUTH_URL="http://localhost:3000"
 PORT=3000
 LSP_ADDRESS="0xf89335a26933d8Dd6193fD91cAB4e1466e5198Bf"
 WEBSOCKET_URL="wss://botanix.diyahir.com/websocket"
+NEXT_PUBLIC_SERVER_URL="http://localhost:3002"
 
 DATABASE_URL="postgresql://yourusername@localhost:5432/yourdatabase"
