--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,26 @@ services:
     build:
       context: .
       dockerfile: packages/nextjs/Dockerfile
-    image: botanix-ln-webapp:latest  
+    image: botanix-ln-webapp:latest
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - server
     restart: always
 
   server:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: packages/server/Dockerfile
     image: botanix-ln-server:latest
     ports:
-      - "3003:3003"
+      - '3003:3003' #WS server
+      - '3002:3002' #HTTP server
+    environment:
+      - PORT=3003
+      - HTTP_PORT=3002
+      - PRISMA_CLI_QUERY_ENGINE_TYPE=binary
+      - PRISMA_CLIENT_ENGINE_TYPE=binary
+      - NODE_ENV=production
     restart: always
-
