--- a/packages/server/sample.env
+++ b/packages/server/sample.env
@@ -15,6 +15,9 @@ LSP_PRIVATE_KEY="0x1233....."
 
 DATABASE_URL="postgresql://yourusername@localhost:5432/yourdatabase"
 
+# For docker
+DATABASE_URL="postgresql://yourusername@host.docker.internal:5432/yourdatabase"
+
 # The port the server should run on
 PORT=3003
 HTTP_PORT=3002
