--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,29 @@ services:
       dockerfile: packages/server/Dockerfile
     image: botanix-ln-server:latest
     ports:
-      - '3003:3003' #WS server
-      - '3002:3002' #HTTP server
+      - '3003:3003' # WS server
+      - '3002:3002' # HTTP server
+    entrypoint: sh -c 'yarn prisma db push --schema=src/prisma/schema.prisma && yarn start'
     environment:
       - PORT=3003
       - HTTP_PORT=3002
       - PRISMA_CLI_QUERY_ENGINE_TYPE=binary
       - PRISMA_CLIENT_ENGINE_TYPE=binary
       - NODE_ENV=production
+      - DATABASE_URL=postgresql://postgres:postgres@prisma:5432/evmdapp
+      - LND_SOCKET=polar-n1-alice:10009 # Use service name for internal network
     restart: always
+
+  prisma:
+    image: postgres:14.1-alpine
+    volumes:
+      - db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRED_DB=evmdapp
+    restart: always
+
+volumes:
+  db:
+    driver: local
