--- a/packages/relay-server/package.json
+++ b/packages/relay-server/package.json
@@ -6,7 +6,7 @@
 		"start": "ts-node src/app.ts"
 	},
 	"dependencies": {
-		"@lightning-evm-bridge/shared": "file:./shared",
+		"@lightning-evm-bridge/shared": "file:./../shared",
 		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
